# lsp

./: .gitignore  .gitmodules  Cargo.toml  README.md  Rhai.toml  Taskfile.yml
crates/hir/: Cargo.toml
crates/hir/benches/: create.rs  query.rs
crates/hir/src/: error.rs  eval.rs  hir.rs  lib.rs  module.rs  scope.rs  source.rs  symbol.rs  syntax.rs  ty.rs  util.rs
crates/hir/src/hir/: add.rs  errors.rs  query.rs  remove.rs  resolve.rs
crates/hir/src/module/: edit.rs  infer.rs  query.rs  remove.rs
crates/hir/tests/: definitions.rs  imports.rs  smoke.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: config.rs  diagnostics.rs  documents.rs  environment.rs  handlers.rs  lib.rs  lsp_ext.rs  mapper.rs  util.rs  utils.rs  watcher.rs  world.rs
crates/lsp/src/environment/: native.rs
crates/lsp/src/handlers/: code_lens.rs  completion.rs  configuration.rs  convert_offsets.rs  document_symbols.rs  documents.rs  folding_ranges.rs  goto.rs  hover.rs  initialize.rs  mod.rs  references.rs  rename.rs  semantic_tokens.rs  syntax_tree.rs  watch.rs  workspace.rs  workspaces.rs
crates/rhai-cli/: Cargo.toml
crates/rhai-cli/src/: args.rs  lib.rs
crates/rhai-cli/src/execute/: config.rs  fmt.rs  lsp.rs  mod.rs
crates/rhai-common/: Cargo.toml
crates/rhai-common/src/: config.rs  environment.rs  lib.rs  util.rs
crates/rhai-common/src/environment/: native.rs
crates/rhai-fmt/: Cargo.toml
crates/rhai-fmt/benches/: fmt.rs
crates/rhai-fmt/src/: algorithm.rs  comments.rs  cst.rs  expr.rs  item.rs  lib.rs  options.rs  path.rs  source.rs  util.rs
crates/rhai-fmt/tests/: fmt.rs
crates/rhai-fmt/tests/snapshots/: fmt__format@array.snap  fmt__format@assignment.snap  fmt__format@char.snap  fmt__format@comments.snap  fmt__format@fibonacci.snap  fmt__format@for1.snap  fmt__format@for2.snap  fmt__format@function_decl1.snap  fmt__format@function_decl2.snap  fmt__format@function_decl3.snap  fmt__format@function_decl4.snap  fmt__format@if1.snap  fmt__format@if2.snap  fmt__format@loop.snap  fmt__format@mat_mul.snap  fmt__format@module.snap  fmt__format@oop.snap  fmt__format@op1.snap  fmt__format@op2.snap  fmt__format@op3.snap  fmt__format@optional_ops.snap  fmt__format@primes.snap  fmt__format@simple.snap  fmt__format@speed_test.snap  fmt__format@string.snap  fmt__format@string_escape.snap  fmt__format@strings_map.snap  fmt__format@switch.snap  (+4 more)
crates/rhai-hir/: Cargo.toml
crates/rhai-hir/src/: error.rs  eval.rs  fmt.rs  hir.rs  lib.rs  module.rs  scope.rs  source.rs  symbol.rs  ty.rs
crates/rhai-hir/tests/: definitions.rs  imports.rs  smoke.rs  visible_symbols.rs
crates/rhai-lsp/: Cargo.toml
crates/rhai-lsp/src/: config.rs  diagnostics.rs  handlers.rs  lib.rs  lsp_ext.rs  utils.rs  world.rs
crates/rhai-rowan/: .gitignore  Cargo.toml  README.md
crates/rhai-rowan/benches/: parse.rs
crates/rhai-rowan/src/: lib.rs  syntax.rs
crates/rhai-rowan/tests/: smoke.rs
crates/rhai-wasm/: Cargo.toml
crates/rhai-wasm/src/: environment.rs  lib.rs  lsp.rs
crates/rowan/: Cargo.toml  build.rs
crates/rowan/benches/: parse.rs
crates/rowan/src/: lib.rs  query.rs  syntax.rs  util.rs
crates/rowan/tests/: smoke.rs  upstream.rs
rhai/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
rhai/.github/workflows/: build.yml
rhai/benches/: README.md  engine.rs  eval_array.rs  eval_expression.rs  eval_map.rs  eval_module.rs  eval_scope.rs  eval_type.rs  iterations.rs  parsing.rs  primes.rs
rhai/codegen/: Cargo.toml  README.md
rhai/codegen/src/: attrs.rs  function.rs  lib.rs  module.rs  register.rs  rhai_module.rs
rhai/codegen/tests/: test_functions.rs  test_modules.rs  test_nested.rs  ui_tests.rs
rhai/codegen/ui_tests/: export_fn_bad_attr.rs  export_fn_bad_attr.stderr  export_fn_bad_value.rs  export_fn_bad_value.stderr  export_fn_cfg.rs  export_fn_cfg.stderr  export_fn_extra_value.rs  export_fn_extra_value.stderr  export_fn_junk_arg.rs  export_fn_junk_arg.stderr  export_fn_missing_value.rs  export_fn_missing_value.stderr  export_fn_path_attr.rs  export_fn_path_attr.stderr  export_fn_raw_noreturn.rs  export_fn_raw_noreturn.stderr  export_fn_raw_return.rs  export_fn_raw_return.stderr  export_mod_bad_attr.rs  export_mod_bad_attr.stderr  export_mod_bad_value.rs  export_mod_bad_value.stderr  export_mod_cfg.rs  export_mod_cfg.stderr  export_mod_extra_value.rs  export_mod_extra_value.stderr  export_mod_junk_arg.rs  export_mod_junk_arg.stderr  export_mod_missing_value.rs  export_mod_missing_value.stderr  export_mod_path_attr.rs  export_mod_path_attr.stderr  export_mod_raw_noreturn.rs  export_mod_raw_noreturn.stderr  export_mod_raw_return.rs  export_mod_raw_return.stderr  first_shared_ref.rs  first_shared_ref.stderr  module_cfg_const.rs  module_cfg_const.stderr  (+91 more)
rhai/examples/: README.md  arrays_and_structs.rs  custom_types_and_methods.rs  hello.rs  reuse_scope.rs  serde.rs  simple_fn.rs  strings.rs  threading.rs
rhai/no_std/no_std_test/: Cargo.toml  README.md
rhai/scripts/: README.md  function_decl2.rhai  function_decl3.rhai  if1.rhai  mat_mul.rhai  module.rhai  op1.rhai  op3.rhai  string.rhai  while.rhai
rhai/src/: ast.rs  custom_syntax.rs  deprecated.rs  dynamic.rs  engine.rs  engine_api.rs  engine_settings.rs  error.rs  error_parsing.rs  fn_args.rs  fn_builtin.rs  fn_call.rs  fn_func.rs  fn_hash.rs  fn_native.rs  fn_ptr.rs  fn_register.rs  immutable_string.rs  lib.rs  optimize.rs  parse.rs  plugin.rs  scope.rs  token.rs  unsafe.rs
rhai/src/module/: mod.rs
rhai/src/serde/: de.rs  deserialize.rs  metadata.rs  mod.rs  ser.rs  serialize.rs  str.rs
rhai/tests/: README.md  arrays.rs  assignments.rs  binary_ops.rs  bit_shift.rs  bool_op.rs  call_fn.rs  chars.rs  closures.rs  comments.rs  compound_equality.rs  constants.rs  custom_syntax.rs  data_size.rs  decrement.rs  eval.rs  expressions.rs  float.rs  fn_ptr.rs  for.rs  functions.rs  get_set.rs  if_block.rs  increment.rs  internal_fn.rs  looping.rs  maps.rs  math.rs  method_call.rs  mismatched_op.rs  modules.rs  native.rs  not.rs  number_literals.rs  operations.rs  ops.rs  optimizer.rs  packages.rs  plugins.rs  plugins_register.rs  (+17 more)
(+301 files in other folders)
