[package]
name = "rhai-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tracing = "0.1.28"
lsp-async-stub = { version = "0.3.3" }
rhai-rowan = { path = "../rowan" }
lsp-types = "0.90.0"
once_cell = "1.8.0"
futures = "0.3.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.68"
rhai-hir = { path = "../hir" }
enum-iterator = "0.7.0"
tracing-subscriber = { version = "0.2.25", optional = true }
clap = { version = "3.0.0-beta.5", optional = true }
async-ctrlc = { version = "1.2.0", features = ["stream"], optional = true }
atty = {version = "0.2.14", optional = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.12.0", features = ["rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = [
    "serde-serialize",
] }
wasm-bindgen-futures = { version = "0.4" }
console_error_panic_hook = { version = "0.1" }
js-sys = { version = "0.3" }
tracing-wasm = { version = "0.2.0" }

[features]
default = []
cli = [
    "clap",
    "lsp-async-stub/tokio-stdio",
    "lsp-async-stub/tokio-tcp",
    "async-ctrlc",
    "tracing-subscriber",
    "atty"
]
wasm-export = []

[[bin]]
name = "rhai"
path = "bin/rhai.rs"
required-features = ["cli"]
