[package]
name = "rhai-lsp"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.58"
arc-swap = "1.5.0"
async-ctrlc = { version = "1.2.0", features = ["stream"] }
async-trait = "0.1.56"
az = "1.2.0"
clap = { version = "3.2.6", features = ["derive"] }
figment = "0.10.6"
futures = "0.3.21"
glob = "0.3.0"
globset = "0.4.9"
indexmap = "1.9.1"
itertools = "0.10.3"
lsp-async-stub = { version = "0.6.0", features = ["tokio-stdio"] }
lsp-types = "0.93.0"
once_cell = "1.12.0"
percent-encoding = "2.1.0"
rhai-hir = { version = "0.1.0", path = "../hir" }
rhai-rowan = { version = "0.1.0", path = "../rowan" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot",
    "macros",
    "fs",
    "time",
] }
toml = "0.5.9"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
url = "2.2.2"

[[bin]]
path = "bin/rhai/main.rs"
name = "rhai"
