[package]
name = "rhai-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rhai-common = { version = "0.1.0", path = "../rhai-common" }
rhai-lsp = { version = "0.1.0", path = "../rhai-lsp" }

clap = { version = "4.0.0", features = ["derive", "cargo"] }
rhai = "1.8.0"
anyhow = "1.0.59"
async-ctrlc = { version = "1.2.0", features = ["stream"] }
tracing = "0.1.36"
rhai-fmt = { version = "0.1.0", path = "../rhai-fmt", features = ["schema"] }
schemars = "0.8.10"
toml = "0.5.9"
figment = "0.10.6"
serde_json = "1.0.85"
codespan-reporting = "0.11.1"
rhai-rowan = { version = "0.1.0", path = "../rhai-rowan" }
itertools = "0.10.3"
glob = "0.3.0"
rhai-hir = { version = "0.1.0", path = "../rhai-hir" }
url = "2.2.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
atty = "0.2.14"
tokio = { version = "1.19.2", features = [
    "sync",
    "fs",
    "time",
    "io-std",
    "rt-multi-thread",
    "parking_lot",
] }
lsp-async-stub = { version = "0.6.0", features = ["tokio-tcp", "tokio-stdio"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.19.2", features = ["sync", "parking_lot", "io-util"] }
