[package]
name = "rhai-fmt"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rhai-rowan = { version = "0.1.0", path = "../rhai-rowan" }
rowan = "0.15.8"
serde = { version = "1.0.144", features = ["derive"] }
tracing = "0.1.36"

[dev-dependencies]
criterion = "0.3.6"
pretty_assertions = "1.3.0"
tracing-subscriber = "0.3.15"

[[bench]]
name = "fmt"
harness = false
