[package]
name = "rhai-hir"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai-rowan = { path = "../rhai-rowan" }

ahash = { version = "0.7.4", features = ["serde"] }
indexmap = { version = "1.7.0", features = ["serde"] }
itertools = "0.10.1"
slotmap = { version = "1.0.6", features = ["serde"] }
static_assertions = "1.1.0"
thiserror = "1.0.30"
tracing = "0.1.29"
strsim = "0.10.0"
url = "2.2.2"
pulldown-cmark = "0.9.2"
strum = { version = "0.24.1", features = ["derive"] }

[dev-dependencies]
insta = "1.8.0"
criterion = { version = "0.3", features = ["html_reports"] }
pprof = { version = "0.5", features = ["flamegraph", "criterion"] }
test-case = "2.1.0"
