[package]
name = "rhai-lsp"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai-hir = { version = "0.1.0", path = "../rhai-hir" }
rhai-rowan = { version = "0.1.0", path = "../rhai-rowan" }

ahash = "0.7.6"
anyhow = "1.0.58"
arc-swap = "1.5.0"
async-trait = "0.1.56"
az = "1.2.0"
clap = { version = "3.2.6", features = ["derive"] }
figment = "0.10.6"
futures = "0.3.21"
glob = "0.3.0"
globset = "0.4.9"
indexmap = "1.9.1"
itertools = "0.10.3"
lsp-async-stub = { version = "0.6.0", features = ["tokio-stdio"] }
lsp-types = "0.93.0"
once_cell = "1.12.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
toml = "0.5.9"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
url = "2.2.2"
rhai-common = { version = "0.1.0", path = "../rhai-common" }
tokio = { version = "1.20.1", features = ["sync"] }
