[package]
name = "rhai-rowan"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
rowan = { version = "0.15.5", features = ["serde1"] }
thiserror = "1.0.29"
tracing = { version = "0.1.28" }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }

[dev-dependencies]
insta = "1.8.0"
criterion = { version = "0.3", features = ["html_reports"] }
pprof = { version = "0.9.1", features = ["flamegraph", "criterion"] }
test-case = "2.1.0"
tracing-subscriber = "0.3.11"
rhai = { version = "1.8.0", features = ["debugging"] }

[build-dependencies]
cargo-emit = "0.2.1"
rhai-sourcegen = { path = "../rhai-sourcegen" }

[[bench]]
name = "parse"
harness = false
