[package]
name = "rhai-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rhai-lsp = { version = "0.1.0", path = "../rhai-lsp" }
rhai-common = { version = "0.1.0", path = "../rhai-common" }

anyhow = "1.0.57"
async-trait = "0.1.56"
clap = { version = "4.0.0", features = ["derive"] }
console_error_panic_hook = "0.1.7"
futures = "0.3.21"
js-sys = "0.3.57"
serde = { version = "1.0.137", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.81"
tokio = "1.19.2"
tracing = "0.1.35"
url = "2.2.2"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
lsp-async-stub = "0.6.0"

[profile.release]
opt-level = 's'
lto = true
