[package]
name = "rhai-rowan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
rowan = {version = "0.14.0", features = ["serde1"]}
thiserror = "1.0.29"
tracing = "0.1.28"
serde = "1"
serde_json = "1"

[dev-dependencies]
insta = "1.8.0"
criterion = { version = "0.3", features = ["html_reports"] }
pprof = { version = "0.5", features = ["flamegraph", "criterion"] }
test-case = "1.2.0"
tracing-subscriber = "0.2.24"

[build-dependencies]
rhai-sourcegen = { path = "../sourcegen" }
cargo-emit = "0.2.1"

[[bench]]
name = "parse"
harness = false
